# django-simple-history

./: .codeclimate.yml  .coveragerc  .editorconfig  .gitignore  .hgignore  .hgtags  .landscape.yml  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  .travis.yml  .yamllint  AUTHORS  AUTHORS.rst  CHANGELOG.md  CHANGES.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  PULL_REQUEST_TEMPLATE.md  README  README.rst  codecov.yml  doc-requirements.txt  pyproject.toml  runtests.py  runtests.sh  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml  test.yml
docs/: Makefile  admin.rst  advanced.rst  common_issues.rst  conf.py  disabling_history.rst  historical_model.rst  history_diffing.rst  index.rst  make.bat  multiple_dbs.rst  querying_history.rst  quick_start.rst  reference.rst  signals.rst  usage.rst  user_tracking.rst  utils.rst
requirements/: coverage.txt  docs.txt  lint.txt  mysql.txt  postgres.txt  test.txt  tox.txt
simple_history/: __init__.py  admin.py  apps.py  exceptions.py  forms.py  manager.py  middleware.py  models.py  signals.py  template_utils.py  utils.py  views.py
simple_history/locale/ar/LC_MESSAGES/: django.mo  django.po
simple_history/locale/cs_CZ/LC_MESSAGES/: django.mo  django.po
simple_history/locale/de/LC_MESSAGES/: django.mo  django.po
simple_history/locale/fr/LC_MESSAGES/: django.mo  django.po
simple_history/locale/id/LC_MESSAGES/: django.mo  django.po
simple_history/locale/nb/LC_MESSAGES/: django.mo  django.po
simple_history/locale/pl/LC_MESSAGES/: django.mo  django.po
simple_history/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
simple_history/locale/ru_RU/LC_MESSAGES/: django.mo  django.po
simple_history/locale/ur/LC_MESSAGES/: django.mo  django.po
simple_history/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
simple_history/management/commands/: _populate_utils.py  clean_duplicate_history.py  clean_old_history.py  populate_history.py
simple_history/registry_tests/: tests.py
simple_history/registry_tests/migration_test_app/: models.py
simple_history/registry_tests/migration_test_app/migrations/: 0001_initial.py  0002_historicalmodelwithcustomattrforeignkey_modelwithcustomattrforeignkey.py  0003_alter_historicalmodelwithcustomattrforeignkey_options_and_more.py  0003_historicalmodelwithcustomattronetoonefield_modelwithcustomattronetoonefield.py  0004_history_date_indexing.py  0005_historicalmodelwithcustomattronetoonefield_modelwithcustomattronetoonefield.py  0006_alter_historicalmodelwithcustomattronetoonefield_options_and_more.py  0007_alter_historicalmodelwithcustomattrforeignkey_options_and_more.py
simple_history/templates/simple_history/: _object_history_list.html  all_history.html  diff_table.html  history_change_list.html  history_compare.html  object_history.html  object_history_form.html  object_history_list.html  objects_history.html  submit_line.html
simple_history/templatetags/: getattributes.py  simple_history_admin_list.py  simple_history_compare.py  simple_history_compat.py
simple_history/tests/: __init__.py  admin.py  apps.py  forms.py  models.py  other_admin.py  test_commands.py  tests.py  urls.py  view.py  views.py
simple_history/tests/custom_user/: admin.py  models.py
simple_history/tests/generated_file_checks/: check_translations.py
simple_history/tests/migration_test_app/migrations/: 0001_initial.py
simple_history/tests/tests/: __init__.py  test_admin.py  test_admin_with_perms.py  test_commands.py  test_deprecation.py  test_forms.py  test_index.py  test_manager.py  test_middleware.py  test_models.py  test_signals.py  test_template_utils.py  test_templatetags.py  test_utils.py  utils.py
