[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-fancy-pypi-readme",
  "hatch-vcs",
  "hatchling",
]

[project]
name = "django-simple-history"
description = "Store model history and view/revert changes from admin site."
maintainers = [
  { name = "Trey Hunner" },
]
authors = [
  { name = "Corey Bertram", email = "corey@qr7.com" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  # DEV: uncomment this when the `pyproject-fmt` pre-commit hook stops removing it
  #"Programming Language :: Python :: 3.13",
]
dynamic = [
  "readme",
  "version",
]
dependencies = [
  "django>=4.2",
]
urls.Changelog = "https://github.com/jazzband/django-simple-history/blob/master/CHANGES.rst"
urls.Documentation = "https://django-simple-history.readthedocs.io/en/stable/"
urls.Homepage = "https://github.com/jazzband/django-simple-history"
urls.Source = "https://github.com/jazzband/django-simple-history"
urls.Tracker = "https://github.com/jazzband/django-simple-history/issues"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"

[tool.hatch.build.targets.wheel]
# Jazzband's release process is limited to 2.2 metadata
# - see https://github.com/jazzband/help/issues/360
core-metadata-version = "2.2"
packages = [
  "simple_history",
]

[tool.hatch.build.targets.sdist]
# Jazzband's release process is limited to 2.2 metadata
# - see https://github.com/jazzband/help/issues/360
core-metadata-version = "2.2"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"
# (Preview the generated readme by installing `hatch` and running
# `hatch project metadata readme` - see
# https://github.com/hynek/hatch-fancy-pypi-readme/blob/24.1.0/README.md#cli-interface)
fragments = [
  { path = "README.rst", start-after = ".. Start of PyPI readme\n\n" },
  { text = "\n====\n\nChangelog\n=========\n\n" },
  # Only include the first title after "Unreleased" - as well as the rest of the file
  { path = "CHANGES.rst", pattern = "\nUnreleased\n-{4,}\n(?:.*?)\n([^\n]+\n-{4,}\n.*)" },
]

[tool.black]
line-length = 88
target-version = [
  "py38",
]

[tool.isort]
profile = "black"
py_version = "38"

[tool.coverage.run]
parallel = true
branch = true
source = [
  "simple_history",
]

[tool.coverage.paths]
source = [
  "simple_history",
  ".tox/*/site-packages",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = [
  "requirements/*",
]
